# habity

./: README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  ui.config.json
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20241012225400_habit.sql  20241012225401_habit.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controllers/: commit.rs  habits.rs  mod.rs  settings.rs
src-tauri/src/database/: migration.rs  mod.rs  store.rs
src-tauri/src/timeline/: graph.rs
src-tauri/src/tools/: utils.rs
src/actions/: commits.ts  habits.ts  settings.ts  timeline.ts
src/components/archived/: index.tsx
src/components/global/: titlebar.tsx
src/components/global/addHabit/: addHabitDraw.tsx  addHabitForm.tsx  addHabitMenu.tsx
src/components/header/: index.tsx
src/components/layouts/: mainLayout.tsx
src/components/timeline/: focusedTimeline.tsx  index.tsx  node.tsx  timelineSettings.tsx
src/components/timelines/: index.tsx
src/components/ui/: dialog.tsx  drawer.tsx  radio-group.tsx
src/context/: menuStore.ts  store.ts
src/lib/: utils.ts
src/lib/providers/: queryClientProvider.tsx
src/pages/archived/: page.tsx
src/pages/main/: page.tsx
src/pages/settings/: page.tsx
src/pages/settings/archived/: page.tsx
src/pages/settings/general/: page.tsx
src/styles/: app.css
src/types/: Commits.ts  Habit.ts  HabitCategory.ts  HabitColor.ts  HabitStatus.ts  HabitStreak.ts  Settings.ts  Tauri.ts  Timeline.ts
